[project]
name = "hyperstream-infra"
version = "0.0.0-dev"
description = ""
authors = [
    {name = "Anatoly Frolov (anafro)",email = "anatolyfroloff@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (==14.3.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
